# peitho

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  Justfile  docker-compose.yml
.github/workflows/: clippy.yml  compose-build.yml  fmt.yml
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260309_094856_create_audit_table.rs  main.rs
crates/peitho/: Cargo.toml
crates/peitho-action/: Cargo.toml
crates/peitho-agent/: Cargo.toml
crates/peitho-agent/src/: lib.rs  skill.rs  toolcall.rs
crates/peitho-audit/: Cargo.toml
crates/peitho-audit/src/: actions.rs
crates/peitho-config/: Cargo.toml
crates/peitho-config/src/: error.rs  lib.rs
crates/peitho-database/: Cargo.toml
crates/peitho-database/src/models/: audit_events.rs  histories.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  sessions.rs
crates/peitho-err/: Cargo.toml
crates/peitho-err/src/: lib.rs
crates/peitho-memory/: Cargo.toml  README.md  README_zh_cn.md
crates/peitho-memory/src/: memory.rs
crates/peitho-pigeon/: Cargo.toml
crates/peitho-pigeon/src/msg/: control.rs
crates/peitho-sandbox/: Cargo.toml
crates/peitho-sandbox/src/: container.rs  error.rs  lib.rs  pool.rs  profile.rs
crates/peitho/src/: error.rs  main.rs
docs/: arch.md  arch_zh_cn.md
