[workspace]
members = [
	"crates/migration",
	"crates/peitho",
	"crates/peitho-sandbox",
	"crates/peitho-audit",
	"crates/peitho-config",
	"crates/peitho-database",
	"crates/peitho-memory",
	"crates/peitho-pigeon",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bollard = "0.20"
config = { version = "0.15", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }
zmq = "0.10"

[workspace.dependencies.sea-orm-migration]
version = "1.1"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
