[workspace]
members = [
	"crates/migration",
	"crates/peitho",
	"crates/peitho-err",
	"crates/peitho-sandbox",
	"crates/peitho-audit",
	"crates/peitho-config",
	"crates/peitho-database",
	"crates/peitho-memory",
	"crates/peitho-pigeon",
	"crates/peitho-agent",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bollard = "0.20"
bytesize = "2.3"
config = { version = "0.15", default-features = false, features = ["toml"] }
crossbeam-skiplist = "0.1"
deadpool = { version = "0.13", features = ["rt_tokio_1"] }
im = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.8"
tap = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7", "serde"] }
zmq = "0.10"

migration = { package = "migration", path = "./crates/migration/" }
peitho-agent = { package = "peitho-agent", path = "./crates/peitho-agent/" }
peitho-audit = { package = "peitho-audit", path = "./crates/peitho-audit/" }
peitho-config = { package = "peitho-config", path = "./crates/peitho-config/" }
peitho-database = { package = "peitho-database", path = "./crates/peitho-database/" }
peitho-err = { package = "peitho-err", path = "./crates/peitho-err/" }
peitho-memory = { package = "peitho-memory", path = "./crates/peitho-memory/" }
peitho-pigeon = { package = "peitho-pigeon", path = "./crates/peitho-pigeon/" }
peitho-sandbox = { package = "peitho-sandbox", path = "./crates/peitho-sandbox/" }

[workspace.dependencies.sea-orm]
version = "1.1"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[workspace.dependencies.sea-orm-migration]
version = "1.1"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
